Update from https://github.com/babsballetschool/website/commit/b3bfd502703b4b7119a1e6490676906236736dbd

--- a/index.html
+++ b/index.html
@@ -33,45 +33,26 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="gratis-proeven-week-16-20-mei--film">Gratis Proeven Week 16-20 mei &amp; Film</h1>
-<p><img src="resources/image/algemeen/Diner%20Dansant%20cover%203.png" alt="dansplezier bij Babs&#39;Balletschool"> 
-Bij Theater De KiK in Elst kun je de week van 16-20 mei gratis proeflessen volgen bij Babs Balletschool en Muziekschool All Music! Je mag kiezen uit viool, drums, piano, cello, blokfluit, (bas)gitaar, trompet, dwarsfluit, trombone, zang of ballet, jazzballet, flamenco, moderne dans of werelddans.</p>
-<p>Tot de zomervakantie krijg je daarnaast ook nog 25% korting op de lessen!</p>
-<p>Als je de proefles hebt gedaan kun je bij de infobalie in Theater De KiK een grátis filmticket reserveren voor één van de films op 20 mei:</p>
-<p>16:00 uur – Sing 2</p>
-<p>20:00 uur – Dansfilm: In The Heights</p>
-<p>Maak snel een afspraak voor de proefles via mail en ontvang daarna het gratis filmticket!</p>
-<p>Babs Balletschool: <a href="mailto:&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#98;&#115;&#98;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a>
-Muziekschool All Music: <a href="mailto:&#x69;&#x6e;&#102;&#111;&#64;&#x6d;&#x75;&#122;&#x69;&#x65;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#109;&#x75;&#115;&#105;&#x63;&#46;&#x6e;&#x6c;">&#x69;&#x6e;&#102;&#111;&#64;&#x6d;&#x75;&#122;&#x69;&#x65;&#107;&#x73;&#x63;&#104;&#111;&#x6f;&#x6c;&#x61;&#108;&#108;&#109;&#x75;&#115;&#105;&#x63;&#46;&#x6e;&#x6c;</a></p>
-<p>Leerlingen van Babs Balletschool en Muziekschool All Music kunnen ook een gratis filmticket reserveren bij de infobalie.</p>
-</section><section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
+            <section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
-<strong>Nieuwsbrief 2 is op 29-3-22</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
+<strong>Nieuwsbrief 3, alweer de laatste van dit seizoen, is 7 juni 2022</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
 vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a> De nieuwsbrief hangt ook op het prikbord in de kleedkamer. </p>
 </section><section><h1 id="peuter-danscursus">Peuter danscursus</h1>
 <p><img src="resources/image/algemeen/Peuterdans.JPG" alt="Peuterdans bij Babs Balletschool">
 Maandagen 10:00 uur
-De kleinste dansertjes vanaf 2 jaar sluiten het 2e blok Peuterdans af op 25 april. Vanaf 16 mei starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
+Met kleinste dansertjes vanaf 2 jaar starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
 Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 De oudste peuters stromen door naar het kleuterballet. </p>
-</section><section><h1 id="project-pilatespilates-bij-babs-balletschool">Project Pilates<img src="resources/image/algemeen/Pilates.JPG" alt="Pilates bij Babs Balletschool"></h1>
-<p>vanaf 14 april Donderdagen 18:30
-Project (6x) Pilates is opgestart en met groot succes! 
-een fijne manier om kennis te maken met een training die perfect aansluit op je dansles en je inzicht geeft in je eigen lijf.
-Versterk je core, stabiliteit en flexibiliteit door oefeningen op een mat onder begeleiding van Britt. </p>
-</section><section><h1 id="hemelvaart">Hemelvaart</h1>
-<p><img src="resources/image/algemeen/meivakantie.jpg" alt="vrije dag bij Babs Balletschool">
-Donderdag 26 mei is een vrije dag, dan zijn er geen lessen. 
-Vrijdag 27 mei gaan de lessen wel gewoon door. </p>
-</section><section><h1 id="samenwerking-akwart-experience-elst-en-babs-balletschool">Samenwerking Akwart Experience Elst en Babs Balletschool</h1>
-<p><img src="resources/image/tutu's.JPG" alt="Optreden bij Babs Balletschool">
-Samen met instagram museum Akwart in Elst hebben we een leuke presentatie bedacht. In het museum zullen een aantal groepen het publiek verrassen met dansoptredens, daarnaast zijn de kamers van Akwart een beleving om door heen te lopen. Kom ook kijken en reserveer een tijdslot bij het museum: <a href="https://www.akwart.nl/">https://www.akwart.nl/</a></p>
-</section><section><h1 id="inschrijven">Inschrijven</h1>
+</section><section><h1 id="inschrijven-seizoen-21-22">Inschrijven seizoen 21-22</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
-De inschrijving is voor een heel dansseizoen, dit loopt ongeveer gelijk met een schooljaar (zie rooster) 
-aan het einde van het dansseizoen loopt de inschrijving automatisch af. 
-Wil je je aanmelden voor de laatste maanden van dit seizoen? klik hier.<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a>
-Inschrijven voor seizoen 21-22 kan vanaf 1 juli a.s.</p>
+Aan het einde van dit dansseizoen lopen de inschrijvingen automatisch af. Daarna is er een zomerstop.
+Wil je graag in het nieuwe seizoen weer komen dansen en meedoen met de voorstelling? Schrijf je dan weer in voor seizoen 21-22, dit kan vanaf 1 juli a.s.</p>
+</section><section><h1 id="open-podium">Open Podium</h1>
+<p><img src="resources/image/liefde_2015/Liefde%20Liedes%20post.JPG" alt="Open Podium bij Babs Balletschool">
+Op zaterdag 9 juli presenteren leerlingen van Babs Balletschool hun eigen werk. 
+Er zijn 2 voorstellingen:  1e om 18:00 &amp; 2e om 19:45.
+Kom je naar iemand kijken? vraag even na in welke voorstelling hij/zij danst! 
+Tickets zijn te bestellen via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
