Update from https://github.com/babsballetschool/website/commit/d8b965e644778746f63be28ed2baf7e2185f7694

--- a/index.html
+++ b/index.html
@@ -35,14 +35,9 @@
             <div class="where"><span>home</span></div>
             <section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
 <p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
-<strong>Nieuwsbrief 3, alweer de laatste van dit seizoen, is 7 juni 2022</strong> per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
+<strong>Nieuwsbrief 3</strong>
+alweer de laatste van dit seizoen, is 7 juni 2022 per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
 vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a> De nieuwsbrief hangt ook op het prikbord in de kleedkamer. </p>
-</section><section><h1 id="peuter-danscursus">Peuter danscursus</h1>
-<p><img src="resources/image/algemeen/Peuterdans.JPG" alt="Peuterdans bij Babs Balletschool">
-Maandagen 10:00 uur
-Met kleinste dansertjes vanaf 2 jaar starten we een laatste blokje Peuterdans voor de zomervakantie (6 x) 
-Ook interesse om met uw kleintje te dansen? doe een gratis proefles, aanmelden via: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
-De oudste peuters stromen door naar het kleuterballet. </p>
 </section><section><h1 id="inschrijven-seizoen-22-23">Inschrijven seizoen 22-23</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
 Aan het einde van dit dansseizoen lopen de inschrijvingen automatisch af. Daarna is er een zomerstop.
@@ -50,9 +45,9 @@ Wil je graag in het nieuwe seizoen weer komen dansen en meedoen met de voorstell
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/liefde_2015/Liefde%20Liedes%20post.JPG" alt="Open Podium bij Babs Balletschool">
 Op zaterdag 9 juli presenteren leerlingen van Babs Balletschool hun eigen werk. 
-Er zijn 2 voorstellingen:  1e om 18:00 &amp; 2e om 19:45.
-Kom je naar iemand kijken? vraag even na in welke voorstelling hij/zij danst! 
-Tickets zijn te bestellen via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
+Er zijn 2 voorstellingen:<br>1e om 18:00 &amp; 2e om 19:45.</p>
+<p>Kom je naar iemand kijken? vraag even na in welke voorstelling hij/zij danst!</p>
+<p>Tickets zijn te bestellen via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
