--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#x61;&#x62;&#115;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#46;&#110;&#108;">&#x62;&#x61;&#x62;&#115;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#x6c;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#x6c;&#46;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#x62;&#97;&#x62;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
