--- a/wanneer.html
+++ b/wanneer.html
@@ -34,9 +34,8 @@
         <main class="">
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> voor <em>dansseizoen 2021-2022</em>.  </p>
-<iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vShF9QZbzqdBX1DwUQt7uIn9LxF8yweI4VsvrOrb3roSnKl87zY4YpYFR7b0MnEGFycEXP7QUxEP8kx/pubhtml?gid=258577618&single=true&amp;headers=false"></iframe>
-
+<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> voor <em>dansseizoen 2022-2023</em>.  </p>
+<iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/1wn2u4ms_V1WasuhcGvD9JUsezH-_yYHR_ZmYIPXmKR8/edit#gid=1911534545></iframe>
 </section><section><h1 id="jaarplannervrije-dagen">Jaarplanner/vrije dagen:</h1>
 <p><img src="resources/image/algemeen/balletvakantie.jpg" alt="Vakantie Babs Balletschool?">  </p>
 <p><strong>OpenDag</strong>   zondag 12 september 2021<br>(OpenDag i.s.m. Theater de Kik en All Music, de hele dag gratis workshops &amp; presentaties)</p>
