--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#x6f;&#111;&#108;&#46;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#98;&#x73;&#64;&#98;&#97;&#x62;&#x73;&#x62;&#97;&#108;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
