--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#98;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#108;&#108;&#x65;&#116;&#115;&#99;&#104;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#64;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#x68;&#111;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
