--- a/wanneer.html
+++ b/wanneer.html
@@ -34,32 +34,33 @@
         <main class="">
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> voor <em>dansseizoen 2022-2023</em>.  </p>
+<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> </p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/1wn2u4ms_V1WasuhcGvD9JUsezH-_yYHR_ZmYIPXmKR8/edit#gid=1911534545></iframe> 
-</section><section><h1 id="jaarplannervrije-dagen">Jaarplanner/vrije dagen:</h1>
-<p><img src="resources/image/algemeen/balletvakantie.jpg" alt="Vakantie Babs Balletschool?">  </p>
-<p><strong>OpenDag</strong>   zondag 12 september 2021<br>(OpenDag i.s.m. Theater de Kik en All Music, de hele dag gratis workshops &amp; presentaties)</p>
-<p><strong>Start seizoen 21-22</strong>    maandag 13 september 2021<br>(1e lessen volgens lesrooster)</p>
-<p><strong>DansDag</strong>   zaterdag 2 oktober 2021
-(Corona Compensatie dansworkshops waaronder; ballet/burlesque/buikdans/modern/jazz)</p>
-<p><strong>Sjors Sportief weken</strong>   11 t/m 21 oktober 2021
-(via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
-<p><strong>Herfstvakantie</strong>       25 t/m 29 oktober 2021
-(in de vakantie zijn er geen lessen)</p>
-<p> <strong>Kijk-lessen</strong>         8 t/m 12 november 2021<br>(familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>Winter Voorstelling</strong>  zondag 19 december 2021      <em>geannuleerd ivm Corona maatregelen.</em><br>(kleine voorstelling in theater de Kik met een aantal groepen) </p>
-<p><strong>Kerstvakantie</strong>         24 december 2021 t/m 7 januari 2022<br>(in de vakantie zijn er geen lessen)</p>
-<p> <strong>Verkleed lessen</strong>      21 t/ 25 februari 2022<br>(Kom verkleed naar de lessen deze week!)</p>
-<p> <strong>Carnavalsvakantie</strong>    28 februari t/m 4 maart 2022<br>(in de vakantie zijn er geen lessen)</p>
-<p><strong>2e Paasdag</strong>            maandag 18 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Koningsdag</strong>            woensdag 27 april 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            2 t/m 13 mei 2022<br>(in de vakantie zijn er geen reguliere lessen, Britt, Sarah en Daphne zullen in de week van 9 t/m 13 mei hun gemiste lessen inhalen) </p>
-<p><strong>Kijk-lessen</strong>           30 mei t/m 3 juni 2022<br>(familie en vrienden kunnen een les komen bekijken)</p>
-<p><strong>2e Pinksterdag</strong>        maandag 6 juni 2022<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Orientatie weken</strong>      27 juni t/m 8 juli 2022<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p><strong>Open Podium</strong>           zaterdag 9 juli 2022 18:00-20:00<br>(Maak samen of alleen een eigen choreografie/dans en laat deze zien aan je publiek! Voor alle leerlingen)     </p>
+</section><section><p>2021-2022</p>
 <p> <strong>Diploma lessen</strong>        11 t/m 15 juli 2022<br>(Oudste kleuters uit K1 en oudste kinder groep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
 <p><strong>Zomervakantie</strong>         vanaf 18 juli 2022<br>(in de vakantie zijn er geen lessen)</p>
+<h1 id="jaarplannervrije-dagen-2022-2023">Jaarplanner/vrije dagen 2022-2023:</h1>
+<p><img src="resources/image/algemeen/balletvakantie.jpg" alt="Vakantie Babs Balletschool?">  </p>
+<p><strong>OpenDag</strong>   zondag 11 september 2022<br>(OpenDag i.s.m. Theater de Kik en All Music, de hele dag gratis workshops &amp; presentaties)</p>
+<p><strong>Start seizoen 22-23</strong>    maandag 12 september 2022<br>(1e lessen volgens lesrooster)</p>
+<p><strong>Sjors Sportief weken</strong>   17 t/m 21 oktober 2022
+(via Sjors Sportief doen kinderen uit omgeving proeflessen mee)</p>
+<p><strong>Herfstvakantie</strong>       24 t/m 29 oktober 2022
+(in de vakantie zijn er geen lessen)</p>
+<p> <strong>Kijk-lessen</strong>         14 t/m 19 november 2022<br>(familie en vrienden kunnen een les komen bekijken)</p>
+<p><strong>Kerstvakantie</strong>         26 december 2022 t/m 7 januari 2023<br>(in de vakantie zijn er geen lessen)</p>
+<p> <strong>Verkleed lessen</strong>      13 t/ 18 februari 2023<br>(Kom verkleed naar de lessen deze week!)</p>
+<p> <strong>Carnavalsvakantie</strong>    20 februari t/m 25 februari 2023<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>2e Paasdag</strong>            maandag 10 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Koningsdag</strong>            donderdag 27 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Meivakantie</strong>            1 t/m 13 mei 2022<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Hemelvaartsdag</strong>         18 mei 2023
+(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>2e Pinksterdag</strong>        maandag 29 mei 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
+<p><strong>Grote voorstelling Schouwburg Arnhem</strong> zaterdag 1 juli 2023</p>
+<p><strong>Orientatie week</strong>      3 t/m 7 juli 2023<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
+<p> <strong>Diploma lessen</strong>        10 t/m 14 juli 2023<br>(Oudste kleuters uit K1 en oudste kinder groep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p><strong>Zomervakantie</strong>         vanaf 17 juli 2023<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
 </section>
