--- a/wie.html
+++ b/wie.html
@@ -51,11 +51,11 @@ Naast het lesgeven bij Babs Balletschool geeft zij ook nog les bij verschillende
 </section><section><h1 id="daphne-wams">Daphne Wams</h1>
 <p><img src="resources/image/algemeen/DaphneWams%20(2).jpg" alt="Daphne">
 Daphne is in 2018 afgestudeerd van de Bachelor opleiding Docent Dans ArtEZ Dansacademie Arnhem. Tijdens haar lessen vindt ze het belangrijk om een fijne sfeer te creëren waarbinnen iedereen zijn of haar danskwaliteiten kan ontwikkelen, individueel of in de groep. Het vinden van balans tussen uitdaging en ontspanning speelt hierbij een rol. Daphne geeft graag aan verschillende groepen les, haar motto is dan ook dat iedereen kan dansen, zolang je er plezier aan beleeft. Bij Babs Balletschool geeft ze met veel plezier modern en jazz op de maandag avond aan tieners en volwassenen. </p>
-</section><section><h1 id="sarah-döker-stagiaire">Sarah Döker/ Stagiaire</h1>
+</section><section><h1 id="sarah-döker">Sarah Döker</h1>
 <p><img src="resources/image/algemeen/Sarah%20Doker.jpeg" alt="Sarah">
-Sarah zit nu in haar laatste jaar van de Bachelor opleiding Docent Dans ArtEZ Dansacademie Arnhem.
-Zij verzorgt als stagiaire de les Werelddans voor kids vanaf 8 jaar. Ook is deed zij een dansproject voor haar opleiding waarbij een aantal van onze leerlingen haar choreografie instudeerden en op het toneel hebben gezet. </p>
-<p>Al op vroege leeftijd heeft zij ontdekt dat danslesgeven haar grote passie is en onder het motto &quot;let&#39;s move to move something&quot;, probeert zij haar leerlingen iedere keer opnieuw enthousiast te maken en mee te nemen in de wereld van de dans.<br>Haar eigen fascinatie heeft zij in de stijl folklore kunnen vinden, zo spelen in haar lessen de achtergond van de muziek, klederdrachten en de geschiedenis van diverse volken en landen een belangrijk rol. Samen de wereld rond dansen en op die manier ook leren welke tradities en gewoontes bij een land horen staat in de lessen centraal. </p>
+Al op vroege leeftijd heeft zij ontdekt dat danslesgeven haar grote passie is en onder het motto &quot;let&#39;s move to move something&quot;, enthousiasmeert zij haar leerlingen iedere keer opnieuw en neemt hen mee in de wereld van de dans.<br>Haar eigen fascinatie heeft zij in de stijl folklore kunnen vinden, zo spelen in haar lessen de achtergond van de muziek, klederdrachten en de geschiedenis van diverse volken en landen een belangrijk rol.</p>
+<p>Afgestudeerd in 2022 aan de Bachelor opleiding Docent Dans ArtEZ Dansacademie Arnhem, start zij als docent met projecten op de zaterdagen. Hierin wordt de danser uitgedaagd en wordt er gezamenlijk aan een choreografie gewerkt. 
+Project duurt enkele zaterdagen in een blokuur van 2 uur achter elkaar. </p>
 </section>
         </main>
         <footer>
