--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;">&#x62;&#x61;&#98;&#x73;&#64;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#116;&#115;&#99;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#98;&#115;&#64;&#x62;&#x61;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#x6e;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
