--- a/hoeveel.html
+++ b/hoeveel.html
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;">&#98;&#x61;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#x62;&#x61;&#x6c;&#108;&#x65;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
