--- a/werelddans.html
+++ b/werelddans.html
@@ -34,7 +34,7 @@
         <main class="">
             <div class="where"><span>werelddans</span></div>
             <section><h1 id="werelddans">Werelddans</h1>
-<p><img src="resources/image/algemeen/Werelddans.PNG" alt="Werelddans"></p>
+<p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="Werelddans"></p>
 <p>Sarah Döker heeft zich gespecialisserd in Wereld dans. Met haar dansen leerlingen de wereld rond met dans folklore uit verschillende landen. Er is aandacht voor houding , muzikaliteit, expressie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
 Laat je verrassen door deze dansstijl! 
 In het rooster bieden we een project aan in de loop van seizoen 22/23 op de zaterdagen in een blok uur van 14:00-16:00.
