Update from https://github.com/babsballetschool/website/commit/fc1e1c3b9ac7f1d46bc6696b0a053d9888f8f402

--- a/wanneer.html
+++ b/wanneer.html
@@ -35,7 +35,7 @@
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
 <p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> </p>
-<iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/1wn2u4ms_V1WasuhcGvD9JUsezH-_yYHR_ZmYIPXmKR8/edit#gid=1911534545></iframe> 
+<iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/1wn2u4ms_V1WasuhcGvD9JUsezH-_yYHR_ZmYIPXmKR8/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe> 
 
 <p>2021-2022</p>
 <p> <strong>Diploma lessen</strong>        11 t/m 15 juli 2022<br>(Oudste kleuters uit K1 en oudste kinder groep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
