--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#x62;&#97;&#x62;&#x73;&#64;&#x62;&#97;&#98;&#115;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#111;&#111;&#x6c;&#x2e;&#x6e;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
