--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 <strong>Nieuwsbrief 3</strong>
 alweer de laatste van dit seizoen, is 7 juni 2022 per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
 vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a> De nieuwsbrief hangt ook op het prikbord in de kleedkamer. </p>
-</section><section><h1 id="inschrijven-seizoen-22-23">Inschrijven seizoen 22-23</h1>
+</section><section><h1 id="inschrijven-of-een-proefles-voor-seizoen-22-23">Inschrijven of een proefles voor seizoen 22-23</h1>
 <p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
 Aan het einde van dit dansseizoen lopen de inschrijvingen automatisch af. Daarna is er een zomerstop.
-Wil je graag in het nieuwe seizoen weer komen dansen en meedoen met de voorstelling? Schrijf je dan weer in voor seizoen 2022-2023, dit kan vanaf 1 juli a.s.</p>
+Wil je graag in het nieuwe seizoen weer komen dansen en meedoen met de voorstelling? Schrijf je dan weer in voor seizoen 2022-2023 via deze link: <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+<p>Liever eerst een proefles doen? dat kan, stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="open-podium">Open Podium</h1>
 <p><img src="resources/image/liefde_2015/Liefde%20Liedes%20post.JPG" alt="Open Podium bij Babs Balletschool">
 Op zaterdag 9 juli presenteren leerlingen van Babs Balletschool hun eigen werk. 
