--- a/wanneer.html
+++ b/wanneer.html
@@ -34,7 +34,7 @@
         <main class="">
             <div class="where"><span>wanneer</span></div>
             <section><h1 id="rooster--jaarplanner--wanneer-zijn-de-lessen">Rooster &amp; Jaarplanner:  <img src="resources/image/algemeen/balletklok.jpg" alt="Wanneer zijn de lessen?"></h1>
-<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> </p>
+<p>Het <strong>dansrooster</strong> en <strong>jaarplanner</strong> (het rooster 22-23 komt binnenkort online)</p>
 <iframe width="100%" height="830px" src="https://docs.google.com/spreadsheets/d/1wn2u4ms_V1WasuhcGvD9JUsezH-_yYHR_ZmYIPXmKR8/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe> 
 
 <p>2021-2022</p>
