Update from https://github.com/babsballetschool/website/commit/566efae6b0303dfde1d2c58dd253e5e1d92b459e

--- a/werelddans.html
+++ b/werelddans.html
@@ -32,7 +32,7 @@
             </nav>
         </header>
         <main class="">
-            <div class="where"><span>werelddans</span></div>
+            <div class="where"><span>dansproject</span></div>
             <section><h1 id="werelddans">Werelddans</h1>
 <p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="Werelddans"></p>
 <p>Sarah Döker heeft zich gespecialisserd in Wereld dans. Met haar dansen leerlingen de wereld rond met dans folklore uit verschillende landen. Er is aandacht voor houding , muzikaliteit, expressie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
