--- a/werelddans.html
+++ b/werelddans.html
@@ -33,9 +33,9 @@
         </header>
         <main class="">
             <div class="where"><span>dansproject</span></div>
-            <section><h1 id="werelddans">Werelddans</h1>
-<p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="Werelddans"></p>
-<p>Sarah Döker heeft zich gespecialisserd in Wereld dans. Met haar dansen leerlingen de wereld rond met dans folklore uit verschillende landen. Er is aandacht voor houding , muzikaliteit, expressie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
+            <section><h1 id="dansproject">Dansproject</h1>
+<p><img src="resources/image/algemeen/Werelddans-Project.JPG" alt="dansproject"></p>
+<p>Sarah Döker heeft zich gespecialisserd in Werelddans. Met haar dansen leerlingen de wereld rond met dans folklore uit verschillende landen. Er is aandacht voor houding , muzikaliteit, expressie en samenwerking. Ook wordt gewerkt aan verschillende choreografieën.
 Laat je verrassen door deze dansstijl! 
 In het rooster bieden we een project aan in de loop van seizoen 22/23 op de zaterdagen in een blok uur van 14:00-16:00.
 voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
