Update from https://github.com/babsballetschool/website/commit/2fa0fb51e383f9e6e935911d17edac3d8d16f666

--- a/kleding.html
+++ b/kleding.html
@@ -26,7 +26,7 @@
                     <li class="flamenco"><a href="/flamenco.html">flamenco</a></li>
                     <li class=""><a href="/jazz.html">jazz</a></li>
                     <li class=""><a href="/modern.html">modern</a></li>
-                    <li class=""><a href="/werelddans.html">werelddans</a></li>
+                    <li class=""><a href="/dansproject.html">dansproject</a></li>
                     <li class=""><a href="/kleding.html">kleding</a></li>
                 </ul>
             </nav>
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#x6e;&#108;">&#x62;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#x6c;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#x61;&#x62;&#x73;&#64;&#98;&#x61;&#98;&#115;&#x62;&#x61;&#x6c;&#x6c;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
