--- a/hoeveel.html
+++ b/hoeveel.html
@@ -26,7 +26,7 @@
                     <li class="flamenco"><a href="/flamenco.html">flamenco</a></li>
                     <li class=""><a href="/jazz.html">jazz</a></li>
                     <li class=""><a href="/modern.html">modern</a></li>
-                    <li class=""><a href="/werelddans.html">werelddans</a></li>
+                    <li class=""><a href="/dansproject.html">dansproject</a></li>
                     <li class=""><a href="/kleding.html">kleding</a></li>
                 </ul>
             </nav>
@@ -59,7 +59,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;">&#x62;&#x61;&#98;&#115;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#x6c;&#108;&#101;&#116;&#x73;&#x63;&#x68;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
