Update from https://github.com/babsballetschool/website/commit/df5ee6743423f690387fd0733c8760a78beca286

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -33,33 +33,33 @@
         </header>
         <main class="">
             <div class="where"><span>hoeveel</span></div>
-            <section><h1 id="tarieven-seizoen-21--22--let-op-tarieven-zijn-gewijzigd"><strong>Tarieven seizoen &#39;21 -&#39;22</strong> ( let op; tarieven zijn gewijzigd)</h1>
+            <section><h1 id="tarieven-seizoen-2022---2023"><strong>Tarieven seizoen 2022 - 2023</strong></h1>
 <p><img src="resources/image/algemeen/portemonnaie%20ballet.jpg" alt="dansplezier bij Babs Balletschool"></p>
-<h2 id="reguliere-lessen--volledig-dansseizoen-2021-2022-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2021-2022 zijn +/- 38 lessen)</h2>
+<h2 id="reguliere-lessen--volledig-dansseizoen-2022-2023-zijn---38-lessen">Reguliere lessen = volledig dansseizoen (2022-2023 zijn +/- 38 lessen)</h2>
 <table>
 <tr><td>2 t/m 5 jaar(P1-K1):</td><td>€ 220,- per seizoen (45 min. 1 les per week)</td></tr>
 <tr><td>6 t/m 17 jaar:</td><td>€ 255,- per seizoen (60 min. 1 les per week)</td></tr>
-<tr><td>18 jaar en ouder:</td><td>€ 285,- per seizoen (60 min.1 les per week)</td></tr>
-<tr><td>extra Spitzen (15 min.):</td><td>€ 45,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
+<tr><td>18 jaar en ouder:</td><td>€ 287,- per seizoen (60 min.1 les per week)</td></tr>
+<tr><td>extra Spitzen (15 min.):</td><td>€ 50,- per seizoen. (aansluitend a.d. les & in overleg) Hierop krijgt u geen korting.</td></tr>
 </table>
 
 
 <p><strong>Gezinskorting</strong> = 15 % op het laagste tarief</p>
 <p><strong>2e les korting</strong> = 20 %  op het laagste tarief</p>
 <p><strong>Studentenkorting</strong> = 20% (met kopie van de collegekaart)</p>
-<p>(er kan van 1 kortingsmogelijkheid gebruik worden gemaakt)</p>
+<p>(er kan per leerling van 1 kortingsmogelijkheid gebruik worden gemaakt)</p>
 </section><section><h2 id="korte-cursusindien-aangeboden">Korte cursus.(indien aangeboden)</h2>
 <ul>
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
 <table>
 <tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€  96,-</td></tr>
-<tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 144,-</td></tr>
+<tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 146,-</td></tr>
 </table>
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Ook kunt u gebruikmaken van <em>de Gelrepas</em>. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#x61;&#x62;&#115;&#x40;&#x62;&#97;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#x65;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
