Update from https://github.com/babsballetschool/website/commit/ac274153a3b5d260944b50d60dac9669827064c8

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -52,14 +52,17 @@
 <ul>
 <li>Een Korte Cursus is geen onderdeel van het reguliere rooster en is vaak een kennismakings cursus. Deze duren max.12 weken en worden vooraf aangekondigd. In rooster aangeduid als KC.</li>
 </ul>
-<table>
+<table>                            **leerlingen:**              
 <tr><td>Korte cursus (12 lessen) t/m 17 jaar:</td><td>€  96,-</td></tr>
 <tr><td>Korte cursus (12 lessen) vanaf 18 jaar:</td><td>€ 146,-</td></tr>
 </table>
+                                  **niet-leerlingen** 
+                                  t/m 17 jaar:</td><td>€  100,-</td></tr>
+                                  vanaf 18 jaar:</td><td>€ 150,-</td></tr>
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#x62;&#115;&#98;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;">&#x62;&#97;&#x62;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#97;&#x6c;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#108;&#46;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
