--- a/kleding.html
+++ b/kleding.html
@@ -148,7 +148,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#x62;&#x61;&#x6c;&#108;&#101;&#x74;&#x73;&#x63;&#104;&#111;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#98;&#x73;&#x40;&#98;&#x61;&#98;&#115;&#x62;&#97;&#x6c;&#x6c;&#x65;&#116;&#x73;&#x63;&#x68;&#111;&#x6f;&#108;&#46;&#110;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
