--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#x62;&#115;&#x40;&#x62;&#97;&#x62;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#108;">&#98;&#97;&#x62;&#x73;&#64;&#98;&#97;&#98;&#x73;&#x62;&#x61;&#x6c;&#x6c;&#101;&#116;&#115;&#99;&#104;&#111;&#x6f;&#108;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
