--- a/index.html
+++ b/index.html
@@ -33,22 +33,20 @@
         </header>
         <main class="">
             <div class="where"><span>home</span></div>
-            <section><h1 id="nieuwsbrief">Nieuwsbrief</h1>
-<p><img src="resources/image/algemeen/ballet-krant.jpg" alt="Nieuwsbrief">
-<strong>Nieuwsbrief 3</strong>
-alweer de laatste van dit seizoen, is 7 juni 2022 per mail naar iedereen verstuurd. Heeft u deze niet of niet goed ontvangen? 
-vraag hem aan via <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a> De nieuwsbrief hangt ook op het prikbord in de kleedkamer. </p>
-</section><section><h1 id="inschrijven-of-een-proefles-voor-seizoen-22-23">Inschrijven of een proefles voor seizoen 22-23</h1>
-<p><img src="resources/image/algemeen/Ballet%20gevorderden.JPG" alt="Inschrijven bij Babs Balletschool">
-Aan het einde van dit dansseizoen lopen de inschrijvingen automatisch af. Daarna is er een zomerstop.
-Wil je graag in het nieuwe seizoen weer komen dansen en meedoen met de voorstelling? Schrijf je dan weer in voor seizoen 2022-2023 via deze link: <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
-<p>Liever eerst een proefles doen? dat kan, stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-</section><section><h1 id="open-podium">Open Podium</h1>
-<p><img src="resources/image/liefde_2015/Liefde%20Liedes%20post.JPG" alt="Open Podium bij Babs Balletschool">
-Op zaterdag 9 juli presenteren leerlingen van Babs Balletschool hun eigen werk. 
-Er zijn 2 voorstellingen:<br>1e om 18:00 &amp; 2e om 19:45.</p>
-<p>Kom je naar iemand kijken? vraag even na in welke voorstelling hij/zij danst!</p>
-<p>Tickets zijn te bestellen via <a href="https://theaterdekik.nl/">https://theaterdekik.nl/</a></p>
+            <section><h1 id="open-dag-11-september-inschrijven-bij-babs-balletschool">Open Dag 11 september <img src="resources/image/algemeen/Open%20Dag%20(2).jpg" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>we starten ons nieuwe dansseizoen met een Open Dag op 11 september. 
+I.s.m. Theater De KiK en All Music zijn er verschillende presentaties en workshops.Buiten is op het cultuurplein ook van alles te beleven onder het genot van een hapje en drankje. 
+Kom ook cultuur snuiven! </p>
+</section><section><h1 id="start-nieuw-seizoen-inschrijven-bij-babs-balletschool">Start nieuw seizoen <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>De eerste lessen beginnen op maandag 12 september. 
+We kijken weer naar jullie uit! Vergeet je niet weer opnieuw in te schrijven<img src="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link" alt="inschrijfformulier">
+Liever eerst een proefles doen? dat kan, stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+</section><section><h1 id="projecten--inschrijven-bij-babs-balletschool">Projecten  <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>vanaf Oktober starten we ook met losse dans projecten, waar je je kunt laten verrassen door andere dansstijlen. Deze zijn voor zowel leerlingen als niet-leerlingen. 
+Informatie volgt zodra we meer weten. </p>
+</section><section><h1 id="kleding-voorschrift-inschrijven-bij-babs-balletschool">Kleding voorschrift <img src="resources/image/algemeen/balletkapstok.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>Om goed te kunnen dansen heb je ook de juiste kleding nodig. 
+Kijk welk kleding voorschrift voor jouw les van toepassing is. Bij Podium-Nijmegen vind je alles wat je nodig hebt, daar is momenteel een grote opruiming dus sla je slag! </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
