--- a/kleding.html
+++ b/kleding.html
@@ -142,13 +142,13 @@
 <li>zwarte flamenco schoenen (zonder spijkertjes!) of dansschoenen Capezio 653.</li>
 </ul>
 </section><section><p><img src="resources/image/algemeen/Jubileumtshirt.JPG" alt="Feest, De Balletboetiek wordt Babs Balletschool"></p>
-<p>T-shirt van  Babs Balletschool :          Volw: €22,50/ Kids €20,-</p>
-<p>Hoodie zonder rits van Babs Balletschool:  Volw:€35,-/ Kids €32,50</p>
-<p>Hoodie met rits van Babs Balletschool:     Volw: €40,-/ Kids €37,50</p>
+<p>T-shirt van  Babs Balletschool :          Volw: €25,-/ Kids €22,50</p>
+<p>Hoodie zonder rits van Babs Balletschool:  Volw:€37,50,-/ Kids €35,-</p>
+<p>Hoodie met rits van Babs Balletschool:     Volw: €42,50/ Kids €39,-</p>
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;">&#98;&#97;&#98;&#115;&#64;&#98;&#97;&#98;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#x2e;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
