--- a/kleding.html
+++ b/kleding.html
@@ -124,15 +124,7 @@
 <ul>
 <li>Zwart balletpak of zwarte top.</li>
 <li>Zwarte legging /jazzbroek of zwarte panty zonder voet.</li>
-<li>Blote voeten/ footundies of sokken</li>
-</ul>
-</section><section><h1 id="wereld-dans">Wereld dans:</h1>
-<p><img src="resources/image/algemeen/Werelddans.PNG" alt="Kleding voorschrift Babs Balletschool"></p>
-<ul>
-<li>zwart balletpak of zwart strak hemd</li>
-<li>roze balletpanty met voet / zwarte legging zonder voet</li>
-<li>Zwarte folklore schoenen/ laarsjes</li>
-<li>Rokken kunnen worden geleend</li>
+<li>Blote voeten/ footundies of zwarte sokken</li>
 </ul>
 </section><section><h1 id="flamenco">Flamenco:</h1>
 <p><img src="resources/image/algemeen/Flamencoles.JPG" alt="Kleding voorschrift Babs Balletschool"></p>
@@ -148,7 +140,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#x62;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;">&#x62;&#97;&#98;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#98;&#x61;&#108;&#x6c;&#x65;&#116;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#46;&#x6e;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
