--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#64;&#x62;&#x61;&#98;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#115;&#99;&#104;&#x6f;&#x6f;&#x6c;&#46;&#110;&#108;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;">&#x62;&#97;&#x62;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#115;&#x63;&#x68;&#x6f;&#111;&#108;&#x2e;&#x6e;&#108;</a> </p>
 </section>
         </main>
         <footer>
