--- a/kleding.html
+++ b/kleding.html
@@ -57,7 +57,7 @@
 <ul>
 <li><p>Roze ballet pak hemdmodel of spaghettibandjes met vast rokje. (bijv. de Intermezzo 3057)</p>
 </li>
-<li><p>Roze ballet panty met voetjes.</p>
+<li><p>Roze ballet panty met voetjes</p>
 </li>
 <li><p>Roze leren balletschoenen</p>
 <p>   Of:</p>
@@ -140,7 +140,7 @@
 <p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
 <p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#x62;&#97;&#x62;&#x73;&#98;&#x61;&#x6c;&#108;&#x65;&#116;&#115;&#x63;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
+bestel via <a href="mailto:&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;">&#98;&#97;&#x62;&#x73;&#x40;&#98;&#97;&#98;&#115;&#x62;&#97;&#108;&#108;&#x65;&#116;&#x73;&#99;&#104;&#111;&#111;&#x6c;&#46;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
