Update from https://github.com/babsballetschool/website/commit/9a4e5c1db998858a8445a5b460500da1d748e700

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ I.s.m. Theater De KiK en All Music zijn er verschillende presentaties en worksho
 Kom ook cultuur snuiven! </p>
 </section><section><h1 id="start-nieuw-seizoen-inschrijven-bij-babs-balletschool">Start nieuw seizoen <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>De eerste lessen beginnen op maandag 12 september. 
-We kijken weer naar jullie uit! 
-Vergeet je niet weer opnieuw in te schrijven.<a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
+We kijken weer naar jullie uit! </p>
+<p>Vergeet je niet weer opnieuw in te schrijven. <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 <p>Liever eerst een proefles doen? dat kan, stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="projecten--inschrijven-bij-babs-balletschool">Projecten  <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>vanaf Oktober starten we ook met losse dans projecten, waar je je kunt laten verrassen door andere dansstijlen. Deze zijn voor zowel leerlingen als niet-leerlingen. 
