Update from https://github.com/babsballetschool/website/commit/bfd27e47534da17701b3e177c478f3a8f7d8720f

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 Verschillende culturele organisaties uit de omgeving laten zien wat ze te bieden hebben door middel van optredens, workshops, open lessen, presentaties of kraampjes met informatie. 
 Daarnaast zijn er optredens van Dik en Pier, is er lekkers van JaTaart! en kunnen kinderen zich laten schminken, zich verkleden of toneelspelen als de mooiste en spannendste sprookjesfiguren.</p>
 <p>Kom ook cultuur snuiven!  </p>
-<p><strong>Programma Open Dag Babs Balletschool in studio:</strong> 
-11:00:  kijk les Modern volw(repetitie)</p>
+<p><strong>Programma Open Dag Babs Balletschool in studio:</strong> </p>
+<p>11:00:  kijk les Modern volw(repetitie)</p>
 <p>12:00:  jazzballet 8+ </p>
 <p>13:00   buikdans 8+ </p>
 <p>14:00   kleuterballet 4-5 </p>
