Update from https://github.com/babsballetschool/website/commit/823daa6fe687fbfa935a31a0f3e74ab983ed3fb6

--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
         <main class="">
             <div class="where"><span>home</span></div>
             <section><h1 id="start-nieuw-seizoen-inschrijven-bij-babs-balletschool">Start nieuw seizoen <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>De eerste lessen zijn weer begonnen afgelopen maandag 12 september. 
+<p>De eerste lessen zijn weer begonnen maar instromen is nog mogelijk! 
 Wil je ook een keer ervaren hoe leuk dansen is? Vraag een proefles aan en stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
-<p>Sta je weer lekker in de les? Vergeet je niet weer opnieuw in te schrijven. <a href="https://docs.google.com/forms/d/e/1FAIpQLScKKMDE3qj1KcmIxWGIdN7Re943kAck9iCVdcWpYOsYjp8lLA/viewform?usp=sf_link">inschrijfformulier</a></p>
 </section><section><h1 id="project-choreo--compositie---inschrijven-bij-babs-balletschool">Project Choreo &amp; Compositie   <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>Op zaterdag 5, 12, 19 november ,10 &amp; 17 december starten we het dansproject &quot; Choreo &amp; Compositie (5 weken) van 14:00-16:00 
+<p>Op zaterdag 5, 12 november ,10 &amp; 17 december starten we het dansproject &quot; Choreo &amp; Compositie (4 weken) van 14:00-16:00 
 Dit project wordt gegeven door Sarah Döker en zij zal samen met de deelnemers (8-80 jaar) een choreografie maken, dansers worden dus ook uitgedaagd een compositie te maken. 
-Kosten zijn €112,- voor leerlingen en €125,- voor niet-leerlingen.Inschrijven kan via de mail of een briefje in de studio.
+Kosten zijn €98,-voor 18+ en €64,- tot 18 jaar. Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
+Inschrijven kan via de mail of een briefje in de studio.
 Meldt je snel aan! </p>
-</section><section><h1 id="kleding-voorschrift-inschrijven-bij-babs-balletschool">Kleding voorschrift <img src="resources/image/algemeen/balletkapstok.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>Om goed te kunnen dansen heb je ook de juiste kleding nodig. 
-Kijk welk kleding voorschrift voor jouw les van toepassing is. Bij Podium-Nijmegen vind je alles wat je nodig hebt, daar is momenteel een grote opruiming dus sla je slag!.  </p>
+</section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>de eerste nieuwsbrief is verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling! 
+Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="challenge--inschrijven-bij-babs-balletschool">Challenge  <img src="resources/image/algemeen/Challenge.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>deze maand zit ik 25 jaar in het vak en ik daag je uit je oudste ballet-foto/herinnering met mij te delen! 
 Dit mag via instagram of de mail. </p>
+</section><section><h1 id="herfstvakantie---inschrijven-bij-babs-balletschool">Herfstvakantie   <img src="resources/image/algemeen/erwaseenspaddestoelen.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>van 24 t/m 28 oktober is het herfstvakantie. Er zijn dan geen lessen. </p>
 </section><section><h1 id="ballet-spelletje-balletris">Ballet Spelletje Balletris</h1>
 <p><img src="resources/image/balletris/babsballetschool-logo.gif" alt="dansplezier bij Babs&#39;Balletschool"> 
  Typ deze code in op je toetsenbord:  ⬆⬆⬇⬇⬅➡⬅➡ ba    </p>
