Update from https://github.com/babsballetschool/website/commit/c82edbe98ef5179f358e92b0d5df71f15aa33110

--- a/kleding.html
+++ b/kleding.html
@@ -35,9 +35,8 @@
             <div class="where"><span>kleding</span></div>
             <section><h1 id="kledingvoorschrift">Kledingvoorschrift</h1>
 <p>Het dragen van de juiste danskleding is voor de leerlingen essentieel om goed te kunnen bewegen en voor de docent noodzakelijk voor het geven van goede correcties. Het geeft tevens een gevoel van rust en éénheid.</p>
-<p>De geschikte danskleding koopt u bij theaterwinkel &quot;PODIUM&quot; van Welderenstraat 107 te Nijmegen.
+<p>De geschikte danskleding koopt u via theaterwinkel &quot;PODIUM&quot;
 <a href="http://www.podium-nijmegen.nl">www.podium-nijmegen.nl</a></p>
-<p>Leerlingen van Babs Balletschool krijgen bij PODIUM 10% korting op hun danskleding/schoenen.</p>
 <p><strong>Algemeen:</strong></p>
 <ul>
 <li>Het haar dient te worden opgestoken in knot of staartje, plukken uit het gezicht, geen los haar!</li>
@@ -134,13 +133,13 @@
 <li>zwarte flamenco schoenen (zonder spijkertjes!) of dansschoenen Capezio 653.</li>
 </ul>
 </section><section><p><img src="resources/image/algemeen/Jubileumtshirt.JPG" alt="Feest, De Balletboetiek wordt Babs Balletschool"></p>
-<p>T-shirt van  Babs Balletschool :          Volw: €25,-/ Kids €22,50</p>
-<p>Hoodie zonder rits van Babs Balletschool:  Volw:€37,50,-/ Kids €35,-</p>
-<p>Hoodie met rits van Babs Balletschool:     Volw: €42,50/ Kids €39,-</p>
-<p>(evt. personalized met je eigen naam voor €2,50 extra.)</p>
-<p>evt is ook te bestellen; cropped shirts/legging/hemd.</p>
+<p>T-shirt van  Babs Balletschool :          Volw: €20,-</p>
+<p>Hoodie* zonder rits van Babs Balletschool:  Volw:€37,50,-/ Kids €35,-</p>
+<p>Hoodie* met rits van Babs Balletschool:     Volw: €42,50/ Kids €39,-</p>
+<p>*evt. personalized met je eigen naam voor €2,50 extra.</p>
+<p>evt is ook te bestellen; cropped shirts/legging/ tshirt lange mouw.</p>
 <p>te bestellen in zwart in diverse maten.
-bestel via <a href="mailto:&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;">&#98;&#x61;&#x62;&#x73;&#x40;&#98;&#x61;&#x62;&#x73;&#x62;&#97;&#x6c;&#108;&#x65;&#x74;&#x73;&#x63;&#x68;&#111;&#111;&#108;&#46;&#110;&#x6c;</a> </p>
+bestel via <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#98;&#97;&#x62;&#115;&#98;&#97;&#108;&#x6c;&#101;&#x74;&#x73;&#x63;&#104;&#x6f;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section><section><h1 id="hoe-maak-ik-een-balletknotje">Hoe maak ik een balletknotje</h1>
 <img class="inline" src="resources/image/algemeen/knotje%20maken%202jpg.jpg" alt="Kledingvoorschrift Babs Balletschool">
 
