--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#x40;&#x62;&#x61;&#x62;&#115;&#x62;&#x61;&#108;&#108;&#101;&#x74;&#115;&#x63;&#104;&#111;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
