Update from https://github.com/babsballetschool/website/commit/e1a6fda30de0737a1e852951466c79c2d96be5ef

--- a/hoeveel.html
+++ b/hoeveel.html
@@ -62,7 +62,7 @@
 
 <p>De kortingen zijn niet van toepassing op de Korte Cursus.</p>
 </section><section><h2 id="betalings-regeling">Betalings regeling:</h2>
-<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#x62;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;">&#x62;&#97;&#98;&#115;&#64;&#98;&#x61;&#98;&#115;&#98;&#x61;&#x6c;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#108;&#x2e;&#110;&#x6c;</a> </p>
+<p>Is het bedrag voor u te hoog om in één keer te betalen dan kunt u ook een betalingsregeling aanvragen. Vraag gerust!  Mailen kan naar:<a href="mailto:&#98;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#x6c;">&#98;&#97;&#98;&#115;&#64;&#x62;&#97;&#x62;&#115;&#x62;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#x63;&#104;&#x6f;&#111;&#x6c;&#x2e;&#x6e;&#x6c;</a> </p>
 </section>
         </main>
         <footer>
