--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
             <section><h1 id="seizoen-2022-2023-inschrijven-bij-babs-balletschool">Seizoen 2022-2023 <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Wil je ook een keer ervaren hoe leuk dansen is? Vraag een proefles aan en stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 instromen is nog mogelijk! </p>
-</section><section><h1 id="project-choreo--compositie---inschrijven-bij-babs-balletschool">Project Choreo &amp; Compositie   <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>Op zaterdagen 5, 12 november ,10 &amp; 17 december dansen we een super tof dansproject  &quot; Choreo &amp; Compositie (4 weken) van 14:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
-Dit project wordt gegeven door Sarah Döker en zij zal samen met de deelnemers (8-80 jaar) een choreografie maken, dansers worden dus ook uitgedaagd een compositie te maken. 
-Kosten zijn €98,-voor 18+ en €64,- tot 18 jaar. Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
+</section><section><h1 id="project-burlesque---inschrijven-bij-babs-balletschool">Project Burlesque   <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject  &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
+Dit project wordt gegeven door Eline Kohfel en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,-voor 1 Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
 Inschrijven kan via de mail of een briefje in de studio.
 Meldt je snel aan! </p>
 </section><section><h1 id="nieuwsbrief--inschrijven-bij-babs-balletschool">Nieuwsbrief  <img src="resources/image/algemeen/ballet-krant.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
-<p>de eerste nieuwsbrief is in oktober verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling! 
+<p>de tweede nieuwsbrief is in december verstuurd met alle informatie die je moet weten over de balletschool en onze voorstelling op 1 juli 2023 in de Schouwburg Arnhem! 
 Mocht je deze niet hebben ontvangen stuur dan een mail naar: <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section><section><h1 id="challenge--inschrijven-bij-babs-balletschool">Challenge  <img src="resources/image/algemeen/Challenge.jpg" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>deze maand zit ik 25 jaar in het vak en ik daag je uit je oudste ballet-foto/herinnering met mij te delen! 
