Update from https://github.com/babsballetschool/website/commit/04122cc23d9c2a5686bc81a2b253f681ce2d20c3

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
             <section><h1 id="seizoen-2022-2023-inschrijven-bij-babs-balletschool">Seizoen 2022-2023 <img src="resources/image/algemeen//Modern.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Wil je ook een keer ervaren hoe leuk dansen is? Vraag een proefles aan en stuur een mail naar:<a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a>
 instromen is nog mogelijk! </p>
-</section><section><h1 id="project-burlesque---inschrijven-bij-babs-balletschool">Project Burlesque   <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+</section><section><h1 id="open-week-inschrijven-bij-babs-balletschool">Open Week <img src="resources/image/algemeen/Kinderballet.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
+<p>van 30 januari t/m 3 februari is het Open Week, geinteresseerden mogen een gratis proefles komen meedoen. 
+Ook via Sjors Sportief zullen er kinderen aansluiten in de lessen voor een proefles. </p>
+</section><section><h1 id="project-burlesque-inschrijven-bij-babs-balletschool">Project Burlesque <img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool"></h1>
 <p>Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject  &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
 Dit project wordt gegeven door Eline Kohfel en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,-voor 1 Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
 Inschrijven kan via de mail of een briefje in de studio.
