Update from https://github.com/babsballetschool/website/commit/dff579440871115c01f26a6bc2b66443d693464b

--- a/wanneer.html
+++ b/wanneer.html
@@ -48,14 +48,14 @@
 <p> <strong>Verkleed lessen</strong>      13 t/ 18 februari 2023<br>(Kom verkleed naar de lessen deze week!)</p>
 <p> <strong>Carnavalsvakantie</strong>    20 februari t/m 25 februari 2023<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>2e Paasdag</strong>            maandag 10 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Koningsdag</strong>            donderdag 27 april 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Meivakantie</strong>            1 t/m 5 mei 2023<br>(in de vakantie zijn er geen lessen)</p>
+<p><strong>Meivakantie</strong>            donderdag 27 april (koningsdag) t/m 5 mei 2023<br>(in de vakantie zijn er geen lessen)</p>
 <p><strong>Hemelvaart</strong>         18 &amp; 19 mei 2023
 (er zijn dan geen lessen) </p>
 <p><strong>2e Pinksterdag</strong>        maandag 29 mei 2023<br>(dit is een vrije dag, er zijn geen lessen) </p>
-<p><strong>Grote voorstelling Schouwburg Arnhem</strong> zaterdag 1 juli 2023</p>
+<p><strong>Grote voorstelling Schouwburg Arnhem</strong> zaterdag 1 juli 2023
+Nodig al je publiek uit om te komen kijken! </p>
 <p><strong>Orientatie week</strong>      3 t/m 7 juli 2023<br>(Kinderen uit de K4 groepen (diploma groep) mogen in andere lessen orienteren welke dansstijl zij volgend seizoen willen kiezen)</p>
-<p> <strong>Diploma lessen</strong>        10 t/m 14 juli 2023<br>(Oudste kleuters uit K1 en oudste kinder groep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
+<p> <strong>Diploma lessen</strong>        10 t/m 14 juli 2023<br>(Oudste kleuters uit K1 en oudste kindergroep K4 ontvangen hun diploma&#39;s. Familie en vrienden mogen hierbij aanwezig zijn!) </p>
 <p><strong>Zomervakantie</strong>         vanaf 17 juli 2023<br>(in de vakantie zijn er geen lessen)</p>
 <h1 id="--sommige-vakantiesvrije-dagen-kunnen-afwijken-van-de-schoolvakanties">! ( sommige vakanties/vrije dagen kunnen afwijken van de schoolvakanties)</h1>
 <p><strong>Wijzigingen voorbehouden!</strong></p>
