--- a/dansproject.html
+++ b/dansproject.html
@@ -33,11 +33,12 @@
         </header>
         <main class="">
             <div class="where"><span>dansproject</span></div>
-            <section><h1 id="dans-project-burlesque">Dans Project Burlesque</h1>
+            <section><h1 id="dans-project-modern-gevorderd">Dans Project Modern Gevorderd</h1>
 <p><img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool">
-Op zaterdagen 14, 21 en 28 januari dansen we een super tof dansproject &quot; Burlesque (3 weken) van 15:00-16:00 (inmiddels al gestart maar instromen is nog mogelijk!)
-Dit project wordt gegeven door Eline Kofehl en zij zal samen met de deelnemers (vanaf 18 jaar) een choreografie maken, ultiem vrouwelijk en vol passie. Durf blij te zijn met je eigen lichaam en dans met je hart!<br>Kosten zijn €98,- Ook niet-leerlingen zijn welkom om deel te nemen! zij betalen wel € 7,- extra aan inschrijfgeld) 
-Inschrijven kan via de mail of een briefje in de studio.
+We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
+Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) en kost totaal € 50,- voor leerlingen 18+ en €45,- voor 18-, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
+Bij voldoende animo gaat het project door. 
+Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;">&#98;&#x61;&#98;&#115;&#64;&#x62;&#97;&#98;&#115;&#98;&#x61;&#108;&#108;&#101;&#x74;&#x73;&#99;&#x68;&#x6f;&#x6f;&#108;&#x2e;&#x6e;&#x6c;</a> 
 Meldt je snel aan! 
 voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
 </section>
