Update from https://github.com/babsballetschool/website/commit/c60590b9beb3ffb812430dcb481db6e833a442fc

--- a/dansproject.html
+++ b/dansproject.html
@@ -35,12 +35,13 @@
             <div class="where"><span>dansproject</span></div>
             <section><h1 id="dans-project-modern-gevorderd">Dans Project Modern Gevorderd</h1>
 <p><img src="resources/image/algemeen/IMG_E8621.JPG" alt="Inschrijven bij Babs Balletschool">
-We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. 
-Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) en kost totaal € 50,- voor leerlingen 18+ en €45,- voor 18-, mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. Ben snel met je inschrijving! 
-Bij voldoende animo gaat het project door. 
-Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;">&#x62;&#x61;&#x62;&#115;&#x40;&#98;&#x61;&#98;&#x73;&#98;&#97;&#108;&#x6c;&#101;&#116;&#x73;&#99;&#104;&#111;&#x6f;&#x6c;&#x2e;&#x6e;&#x6c;</a> 
-Meldt je snel aan! 
-voor info kun je mailen naar <a href="mailto:babs@babsballetschool.nl">babs@babsballetschool.nl</a></p>
+We hebben weer een volgend dansproject, dit keer Modern gevorderd, Sarah Döker gaat het project verzorgen. </p>
+<p>Dit project duurt 2 zaterdagen (11 &amp; 25 maart) van 14:00-16:00 (dubbel dansuur!) 
+kosten totaal €50,- voor leerlingen 18+ en €45,- voor 18-
+Mensen van buitenaf zijn ook welkom, zij betalen € 7,- extra administratie kosten. 
+Ben snel met je inschrijving! 
+Bij voldoende animo gaat het project door. </p>
+<p>Inschrijven kan via het formulier dat in de studio ligt of via de mail: <a href="mailto:&#98;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;">&#98;&#x61;&#98;&#x73;&#x40;&#98;&#97;&#98;&#x73;&#98;&#97;&#x6c;&#x6c;&#x65;&#116;&#115;&#x63;&#x68;&#111;&#x6f;&#108;&#x2e;&#110;&#108;</a> </p>
 </section>
         </main>
         <footer>
